--- a/.github/workflows/publish-page.yml
+++ b/.github/workflows/publish-page.yml
@@ -20,7 +20,12 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v2
         with:
-          version: 8
+          version: 9
+
+      - name: Debug
+        run: |
+          ls -al
+          pwd
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
