--- a/.github/workflows/publish-page.yml
+++ b/.github/workflows/publish-page.yml
@@ -7,7 +7,10 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: write
+    concurrency:
+      group: ${{ github.workflow }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -21,11 +24,6 @@ jobs:
         uses: pnpm/action-setup@v2
         with:
           version: 9
-
-      - name: Debug
-        run: |
-          ls -al
-          pwd
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
