--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.1.0",
     "next-themes": "latest",
+    "posthog-js": "^1.232.4",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
